told ide to calm down, using TimeLine to run the gui, with the simulation running a little faster